Persistance layer completed

--- a/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
+++ b/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
@@ -4,4 +4,20 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistance\Configurations\" />
+    <Folder Include="Persistance\Seeding\" />
+    <Folder Include="UnitOfWork\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="5.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeeManagement.Core\EmployeeManagement.Core.csproj" />
+  </ItemGroup>
+
 </Project>
