--- a/backend/src/EmployeeManagement.API/EmployeeManagement.API.csproj
+++ b/backend/src/EmployeeManagement.API/EmployeeManagement.API.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeeManagement.Service\EmployeeManagement.Service.csproj" />
+  </ItemGroup>
+
 </Project>
