Db context setup completed

--- a/backend/src/EmployeeManagement.API/appsettings.json
+++ b/backend/src/EmployeeManagement.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Mahmood": "Server=MAHMOOD-PC; Database=EmployeeManagement; Integrated Security=True;"
+  },
   "AllowedHosts": "*"
 }
