--- a/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
+++ b/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
   </ItemGroup>
 
   <ItemGroup>
