--- a/backend/src/EmployeeManagement.Core/EmployeeManagement.Core.csproj
+++ b/backend/src/EmployeeManagement.Core/EmployeeManagement.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
   </ItemGroup>
 
