--- a/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
+++ b/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.17" />
   </ItemGroup>
 
   <ItemGroup>
