--- a/backend/src/EmployeeManagement.API/appsettings.Development.json
+++ b/backend/src/EmployeeManagement.API/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "Database": "Server=127.0.0.1;Port=5432;Database=employee_management;User Id=postgres;Password=postgres"
+  },
+  "AllowedHosts": "*"
 }
