--- a/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
+++ b/backend/src/EmployeeManagement.DataAccess/EmployeeManagement.DataAccess.csproj
@@ -6,7 +6,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="5.0.14" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.14" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.17" />
 	</ItemGroup>
 
