Caching service added

--- a/backend/src/EmployeeManagement.Service/EmployeeManagement.Service.csproj
+++ b/backend/src/EmployeeManagement.Service/EmployeeManagement.Service.csproj
@@ -5,6 +5,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="System.Runtime.Caching" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\EmployeeManagement.DataAccess\EmployeeManagement.DataAccess.csproj" />
 	</ItemGroup>
 	<PropertyGroup>
