--- a/backend/src/EmployeeManagement.API/EmployeeManagement.API.csproj
+++ b/backend/src/EmployeeManagement.API/EmployeeManagement.API.csproj
@@ -21,7 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\EmployeeManagement.Service\EmployeeManagement.Service.csproj" />
+		<ProjectReference Include="..\EmployeeManagement.Service\EmployeeManagement.Business.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
